Improved security handler configuration.
